# porr-pso

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  bestParticlesLog.txt  log.txt  main.cpp  readlog.py
Wykresy PORR _ GPU/CUDA/: logFile_CUDA_par_300000_dim_100_blockSize_512_PSO_Task2.txt  logFile_CUDA_par_350000_dim_100_blockSize_512_MonteCarlo_Task1.txt
Wykresy PORR _ GPU/MPI_PSO_T1/: particlesLog_p1_49_2_academic_pso_1_a_MPI.txt  particlesLog_p2_49_2_academic_pso_1_a_MPI.txt
Wykresy PORR _ GPU/MPI_PSO_T2/: readlog2.py
Wykresy_PORR_GPU/CUDA/: logFile_CUDA_par_100000_dim_100_blockSize_512_PSO_Task1.txt  logFile_CUDA_par_350000_dim_100_blockSize_512_MonteCarlo_Task2.txt  readlog2.py
Wykresy_PORR_GPU/MPI_PSO_T1/: particlesLog_p0_49_2_academic_pso_1_a_MPI.txt  readlog2.py
Wykresy_PORR_GPU/MPI_PSO_T2/: particlesLog_p0_1904_2_academic_pso_2_a_MPI.txt  particlesLog_p1_1904_2_academic_pso_2_a_MPI.txt  particlesLog_p2_1904_2_academic_pso_2_a_MPI.txt
include/: AutoTest.h  ConfigEx1.h  ConfigEx2.h  ConfigStopCriterionAcademic.h  ConfigStopCriterionNormal.h  InputParser.h  Logger.h  MonteCarlo.h  MonteCarloParticle.h  MonteCarloParticlesSet.h  OptimizationConfig.h  OptimizationExercisesConfig.h  Options.h  Particle.h  ParticleBase.h  PositionVectorOperator.h  StopCriterionConfig.h  Swarm.h  SwarmParticle.h  Timer.h
logs/: log_10_2_0.001_2020-12-14_01:32:29_s1aP.txt  log_10_2_0.001_2020-12-14_02:22:43_s1aP.txt  log_2020-12-12_20:30:15.txt  log_2020-12-12_20:39:58.txt  log_2020-12-12_22:12:42.txt  log_2020-12-12_22:13:02.txt  log_2020-12-13_18:58:43.txt  particlesLog_10_2_0.001_2020-12-14_01:32:29_s1aP.txt  particlesLog_10_2_0.001_2020-12-14_02:22:43_s1aP.txt  particlesLog_2020-12-12_20:30:15.txt  particlesLog_2020-12-12_22:11:57.txt  particlesLog_2020-12-12_22:12:12.txt  particlesLog_2020-12-12_22:12:42.txt  particlesLog_2020-12-12_22:12:55.txt  particlesLog_2020-12-12_22:13:02.txt  particlesLog_2020-12-13_18:58:18.txt  particlesLog_2020-12-13_18:58:32.txt  particlesLog_2020-12-13_18:58:39.txt  particlesLog_2020-12-13_18:58:43.txt
prezentacja/: Makefile  PORR_prezentacja.tex
sprawozdanie/: Makefile  PORR_sprawozdanie_1.bib  PORR_sprawozdanie_1.tex  PORR_sprawozdanie_2.tex
sprawozdanie/sprawozdanie_1/: BeamerColor.sty  PORR_sprawozdanie_1.bib
sprawozdanie/sprawozdanie_2/: BeamerColor.sty  Makefile  PORR_sprawozdanie_2.tex
src/: AutoTest.cpp  ConfigEx1.cpp  ConfigEx2.cpp  ConfigStopCriterionAcademic.cpp  ConfigStopCriterionNormal.cpp  InputParser.cpp  Logger.cpp  MonteCarlo.cpp  MonteCarloParticle.cpp  MonteCarloParticlesSet.cpp  OptimizationConfig.cpp  OptimizationExercisesConfig.cpp  Options.cpp  Particle.cpp  ParticleBase.cpp  PositionVectorOperator.cpp  StopCriterionConfig.cpp  Swarm.cpp  SwarmParticle.cpp  Timer.cpp
